Issue #SB-20230 fix: Add text filter on mobile web and don't expand it by default

--- a/src/app/client/src/assets/styles/layout/_header.scss
+++ b/src/app/client/src/assets/styles/layout/_header.scss
@@ -46,7 +46,7 @@
   background: var(--sbt-header-bg);
   @include respond-below(sm) {
   overflow-x: auto;
-  padding: calculateRem(8px) calculateRem(16px);
+  padding: 0 calculateRem(8px) calculateRem(8px) calculateRem(16px);
   }
   @include respond-above(sm) {
     height:calculateRem(72px);
