--- a/src/app/client/src/assets/styles/themes.scss
+++ b/src/app/client/src/assets/styles/themes.scss
@@ -879,6 +879,13 @@ html[layout='joy'] {
   app-usage-reports .sb-workspace-bg .sb-sidebar-menu {
     position: inherit !important;
   }
+
+  .sbt-dropdown-profile-area, app-language-dropdown, .sbt-dropdown-language {
+    @include respond-below(sm) {
+      width: 100%;
+      margin-bottom: calculateRem(8px);
+    }
+  }
 }
 
 html[layout='joy'][dir='rtl'] {
